# SML

./: .gitignore  CMakeLists.txt  README.md  normal_distribution_2d.Rmd  requirements.txt
MCMC/: gaussian_hmc.cpp  gaussian_hmc_multiple_val.cpp  gibbs_sampling_three.cpp  metropolis.cpp  metropolis2.cpp
bayesian/: bayesian_regression.ipynb  variational_method.ipynb
binormal_distribution/: beta_distribution.ipynb  beta_distribution_integrate.ipynb  beta_distribution_negative_binomial .ipynb
exponential_distribution/: exponential_distribution.Rmd  exponential_distribution.ipynb
machine_learning/: .gitignore  gaussian_svm.ipynb  gaussian_svm.py  linear_digit.Rmd  linear_digit.ipynb  linear_discriminant_analysis.R  linear_discriminant_analysis.Rmd  linear_discriminant_analysis.ipynb  maximuml_likelihood_estimation.ipynb  newtons_method.ipynb
non_parametric/: KDE.ipynb  KNN.ipynb
normal_distribution/: Chi-square_distribution.ipynb  bayesian_mean.ipynb  bayesian_var.ipynb  central_limit_theorem.ipynb  kl_divergence.Rmd  kl_divergence.ipynb  normal_distribution_2d.Rmd  normal_distribution_2d.ipynb
optimization/: backtracking.ipynb  barrier_method.ipynb  penalty.ipynb  penalty_method.ipynb
regression/: cross_validation.ipynb  cross_validation.py  linear_regression.ipynb  rigde_regression.ipynb  student_regression.ipynb
search/: a_star.py
simulation/: 2d-fourier.ipynb  2d-fourier.py  ABC.ipynb  ABC.py  CG.py  PSO.ipynb  PSO.py  README.md  eular-runge-kutta.ipynb  eular-runge-kutta.py  gauss-seidel.ipynb  gauss-seidel.py  jacobi.ipynb  jacobi.py  monte_calro.py  (+6 more)
(+1 files in other folders)
